fix main container overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,8 @@ body{
     width: 100vw;
     height: 100vh;
     height: 100dvh;
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 .header img{
     max-width: 5rem;
@@ -61,13 +63,12 @@ body{
     
 }
 
-
 .main{ 
     width: 100vw;
-    height:100%;
     display: grid;
     grid-template-columns: 300px 1fr;
 }
+
 .content{
     background-color: pink;
 }
